# watertool

./: .env.example  .gitignore  LICENSE  README.md  RESEARCH.md  pyproject.toml
src/watertool/: __init__.py  cli.py  config.py  util.py
src/watertool/db/: schema.sql  store.py
src/watertool/ingest/: receiver.py
src/watertool/jobs/: backfill.py  common.py  reconcile.py
src/watertool/rachio/: client.py  events.py  gallons.py  models.py  webhooks.py
src/watertool/web/: dashboard.html  payload.py  routes.py
tests/: test_client.py  test_events.py  test_gallons.py  test_integration.py  test_receiver.py  test_store.py  test_web.py  test_webhooks.py
